tests/rosetta/x/Mochi/bulls-and-cows.mochi
fun indexOf(s: string, ch: string): int {
  var i = 0
  while i < len(s) {
    if substring(s, i, i + 1) == ch { return i }
    i = i + 1
  }
  return -1
}

fun shuffle(xs: list<string>): list<string> {
  var arr = xs
  var i = len(arr) - 1
  while i > 0 {
    let j = now() % (i + 1)
    let tmp = arr[i]
    arr[i] = arr[j]
    arr[j] = tmp
    i = i - 1
  }
  return arr
}

fun main() {
  print("Cows and Bulls")
  print("Guess four digit number of unique digits in the range 1 to 9.")
  print("A correct digit but not in the correct place is a cow.")
  print("A correct digit in the correct place is a bull.")

  var digits = ["1","2","3","4","5","6","7","8","9"]
  digits = shuffle(digits)
  var pat = digits[0] + digits[1] + digits[2] + digits[3]
  let valid = "123456789"

  while true {
    print("Guess: ")
    let guess = input()
    if len(guess) != 4 {
      print("Please guess a four digit number.")
      continue
    }
    var cows = 0
    var bulls = 0
    var seen = ""
    var i = 0
    var malformed = false
    while i < 4 {
      let cg = substring(guess, i, i + 1)
      if indexOf(seen, cg) != -1 {
        print("Repeated digit: " + cg)
        malformed = true
        break
      }
      seen = seen + cg
      let pos = indexOf(pat, cg)
      if pos == -1 {
        if indexOf(valid, cg) == -1 {
          print("Invalid digit: " + cg)
          malformed = true
          break
        }
      } else {
        if pos == i {
          bulls = bulls + 1
        } else {
          cows = cows + 1
        }
      }
      i = i + 1
    }
    if malformed { continue }
    print("Cows: " + str(cows) + ", bulls: " + str(bulls))
    if bulls == 4 {
      print("You got it.")
      break
    }
  }
}

main()
